Complete navbar for desktop screens

--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="nav-left">
-            <a href="#home">ÜBER UNS</a>
-            <a href="#about">GALERIE</a>
-        </div>
-        <div class="logo">
-            <img src="img/logo.svg" alt="Logo">
-        </div>
-        <div class="nav-right">
-            <a href="#services">REZENSIONEN</a>
-            <a href="#contact">STANDORT</a>
+    <!-- Navigation -->
+    <nav class="navbar"> 
+        <div class="nav-container container">
+            <div class="nav-left">
+                <a href="#home">ÜBER UNS</a>
+                <a href="#about">GALERIE</a>
+            </div>
+            <div class="logo">
+                <img src="img/logo.svg" alt="Logo">
+            </div>
+            <div class="nav-right">
+                <a href="#services">REZENSIONEN</a>
+                <a href="#contact">STANDORT</a>
+            </div>
         </div>
     </nav>
 </body>
