Hero section in process

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/hero.css">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
@@ -30,5 +31,13 @@
             </div>
         </div>
     </nav>
+
+    <!-- Hero -->
+    <section class="hero">
+        <div class="hero-container container">
+            <h1>FRISCH, LECKER, EINZIGARTIG: DEIN DÖNER VON DER ZONE!</h1>
+            <p class="hero-text">Entdecke den unvergesslichen Geschmack unseres authentischen Döner Kebabs – mit frischen Zutaten, feinsten Gewürzen und einer Prise Leidenschaft. Komm vorbei und schmeck den Unterschied!</p>
+        </div>
+    </section>
 </body>
 </html>
