Continue with heros section and add basic sample of about section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/hero.css">
+    <link rel="stylesheet" href="css/about.css">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
@@ -17,17 +18,17 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar"> 
-        <div class="nav-container container">
+        <div class="nav-container">
             <div class="nav-left">
-                <a href="#home">ÜBER UNS</a>
-                <a href="#about">GALERIE</a>
+                <a href="#about">ÜBER UNS</a>
+                <a href="#gallery">GALERIE</a>
             </div>
             <div class="logo">
                 <img src="img/logo.svg" alt="Logo">
             </div>
             <div class="nav-right">
-                <a href="#services">REZENSIONEN</a>
-                <a href="#contact">STANDORT</a>
+                <a href="#reviews">REZENSIONEN</a>
+                <a href="#location">STANDORT</a>
             </div>
         </div>
     </nav>
@@ -36,8 +37,33 @@
     <section class="hero">
         <div class="hero-container container">
             <h1>FRISCH, LECKER, EINZIGARTIG: DEIN DÖNER VON DER ZONE!</h1>
-            <p class="hero-text">Entdecke den unvergesslichen Geschmack unseres authentischen Döner Kebabs – mit frischen Zutaten, feinsten Gewürzen und einer Prise Leidenschaft. Komm vorbei und schmeck den Unterschied!</p>
+            <p class="hero-text">Entdecke den unvergesslichen Geschmack unseres authentischen Döner
+                Kebabs – mit frischen Zutaten, feinsten Gewürzen und einer Prise
+                Leidenschaft. Komm vorbei und schmeck den Unterschied!</p>
+                <div class="hero-buttons">
+                    <a href="#about" class="hero-button more">MEHR ERFAHREN</a>
+                    <a href="img/menu.png" target="_blank" class="hero-button menu">ZUR SPEISEKARTE</a>
+                </div>
         </div>
     </section>
+
+    <!-- About Section -->
+    <section class="about section" id="about">
+        <div class="about-content">
+            <div class="about-text">
+                <h2>ÜBER UNS</h2> 
+                <p>Unsere Philosophie ist einfach: Qualität über alles. Wir bereiten
+                    unsere Speisen täglich frisch zu, verwenden regionale Zutaten und
+                    legen besonderen Wert auf authentischen Geschmack. Bei uns trifft
+                    Tradition auf Moderne – überzeug Dich selbst und genieße einen
+                    Döner, der anders ist als der Rest.</p>
+            </div>
+            <div class="about-image">
+                <img src="img/about.jpg" alt="About Us">
+            </div>
+        </div>
+    </section>
+
+
 </body>
 </html>
