Worked on about

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar"> 
+    <nav class="navbar">
         <div class="nav-container">
             <div class="nav-left">
                 <a href="#about">ÜBER UNS</a>
@@ -33,37 +33,38 @@
         </div>
     </nav>
 
-    <!-- Hero -->
-    <section class="hero">
-        <div class="hero-container container">
-            <h1>FRISCH, LECKER, EINZIGARTIG: DEIN DÖNER VON DER ZONE!</h1>
-            <p class="hero-text">Entdecke den unvergesslichen Geschmack unseres authentischen Döner
-                Kebabs – mit frischen Zutaten, feinsten Gewürzen und einer Prise
-                Leidenschaft. Komm vorbei und schmeck den Unterschied!</p>
+    <div class="main-wrapper">
+        <!-- Hero Section -->
+        <section class="hero">
+            <div class="hero-container container">
+                <h1>FRISCH, LECKER, EINZIGARTIG: DEIN DÖNER VON DER ZONE!</h1>
+                <p class="hero-text">Entdecke den unvergesslichen Geschmack unseres authentischen Döner
+                    Kebabs – mit frischen Zutaten, feinsten Gewürzen und einer Prise
+                    Leidenschaft. Komm vorbei und schmeck den Unterschied!</p>
                 <div class="hero-buttons">
                     <a href="#about" class="hero-button more">MEHR ERFAHREN</a>
                     <a href="img/menu.png" target="_blank" class="hero-button menu">ZUR SPEISEKARTE</a>
                 </div>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section class="about section" id="about">
-        <div class="about-content">
-            <div class="about-text">
-                <h2>ÜBER UNS</h2> 
-                <p>Unsere Philosophie ist einfach: Qualität über alles. Wir bereiten
-                    unsere Speisen täglich frisch zu, verwenden regionale Zutaten und
-                    legen besonderen Wert auf authentischen Geschmack. Bei uns trifft
-                    Tradition auf Moderne – überzeug Dich selbst und genieße einen
-                    Döner, der anders ist als der Rest.</p>
             </div>
-            <div class="about-image">
-                <img src="img/about.jpg" alt="About Us">
+        </section>
+
+        <!-- About Section -->
+        <section class="about section" id="about">
+            <div class="about-content">
+                <div class="about-text">
+                    <h2>ÜBER UNS</h2>
+                    <p>Unsere Philosophie ist einfach: Qualität über alles. Wir bereiten
+                        unsere Speisen täglich frisch zu, verwenden regionale Zutaten und
+                        legen besonderen Wert auf authentischen Geschmack. Bei uns trifft
+                        Tradition auf Moderne – überzeug Dich selbst und genieße einen
+                        Döner, der anders ist als der Rest.</p>
+                </div>
+                <div class="about-image">
+                    <img src="img/about.jpg" alt="About Us">
+                </div>
             </div>
-        </div>
-    </section>
-
-
+        </section>
+    </div>
 </body>
+
 </html>
