Made some adjustments for scolling etc.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="main-wrapper">
         <!-- Hero Section -->
         <section class="hero">
-            <div class="hero-container container">
+            <div class="hero-container">
                 <h1>FRISCH, LECKER, EINZIGARTIG: DEIN DÖNER VON DER ZONE!</h1>
                 <p class="hero-text">Entdecke den unvergesslichen Geschmack unseres authentischen Döner
                     Kebabs – mit frischen Zutaten, feinsten Gewürzen und einer Prise
@@ -48,7 +48,7 @@
             </div>
         </section>
 
-        <!-- About Section -->
+        <!-- About -->
         <section class="about section" id="about">
             <div class="about-content">
                 <div class="about-text">
@@ -62,6 +62,16 @@
                 <div class="about-image">
                     <img src="img/about.jpg" alt="About Us">
                 </div>
+            </div>
+        </section>
+
+        <!-- Gallery -->
+        <section class="gallery" id="gallery">
+            <div class="gallery-container">
+                <h2>GALERIE</h2>
+                <p>Bilder sagen mehr als tausend Worte – wirf einen Blick in unsere
+                    Galerie und lass Dich von unseren frischen, liebevoll zubereiteten
+                    Speisen inspirieren. Hier wird der Genuss sichtbar!</p>
             </div>
         </section>
     </div>
