Add gallery section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/hero.css">
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/gallery.css">
+    <link rel="stylesheet" href="css/reviews.css">
+    <link rel="stylesheet" href="css/location.css">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
@@ -68,10 +71,71 @@
         <!-- Gallery -->
         <section class="gallery" id="gallery">
             <div class="gallery-container">
-                <h2>GALERIE</h2>
-                <p>Bilder sagen mehr als tausend Worte – wirf einen Blick in unsere
+                <div class="gallery-text">
+                    <h2>GALERIE</h2>
+                    <p>Bilder sagen mehr als tausend Worte – wirf einen Blick in unsere
                     Galerie und lass Dich von unseren frischen, liebevoll zubereiteten
                     Speisen inspirieren. Hier wird der Genuss sichtbar!</p>
+                </div>
+            </div>
+            <div class="slider" reverse="true" style="
+                    --width: 200px;
+                    --height: 200px;
+                    --quantity: 9;
+                ">
+                <div class="list">
+                    <div class="item" style="--position: 1"><img src="img/doner.jpg" alt=""></div>
+                    <div class="item" style="--position: 2"><img src="img/interior.jpg" alt=""></div>
+                    <div class="item" style="--position: 3"><img src="img/doner2.jpg" alt=""></div>
+                    <div class="item" style="--position: 4"><img src="img/donertheke.jpg" alt=""></div>
+                    <div class="item" style="--position: 5"><img src="img/doner3.jpg" alt=""></div>
+                    <div class="item" style="--position: 6"><img src="img/donerzone-wall.jpg" alt=""></div>
+                    <div class="item" style="--position: 7"><img src="img/doner.jpg" alt=""></div>
+                    <div class="item" style="--position: 8"><img src="img/interior.jpg" alt=""></div>
+                    <div class="item" style="--position: 9"><img src="img/doner2.jpg" alt=""></div>
+                </div>
+            </div>
+            <div class="slider" reverse="false" style="
+                    --width: 200px;
+                    --height: 200px;
+                    --quantity: 9;
+                ">
+                <div class="list">
+                    <div class="item" style="--position: 1"><img src="img/doner.jpg" alt=""></div>
+                    <div class="item" style="--position: 2"><img src="img/interior.jpg" alt=""></div>
+                    <div class="item" style="--position: 3"><img src="img/doner2.jpg" alt=""></div>
+                    <div class="item" style="--position: 4"><img src="img/donertheke.jpg" alt=""></div>
+                    <div class="item" style="--position: 5"><img src="img/doner3.jpg" alt=""></div>
+                    <div class="item" style="--position: 6"><img src="img/donerzone-wall.jpg" alt=""></div>
+                    <div class="item" style="--position: 7"><img src="img/doner.jpg" alt=""></div>
+                    <div class="item" style="--position: 8"><img src="img/interior.jpg" alt=""></div>
+                    <div class="item" style="--position: 9"><img src="img/doner2.jpg" alt=""></div>
+                </div>
+            </div>
+        </section>
+        
+        <!-- Reviews -->
+        <section class="reviews section" id="reviews">
+            <div class="reviews-content">
+                <div class="reviews-text">
+                    <h2>REZENSIONEN</h2>
+                    <p>Unsere Gäste sind begeistert – überzeuge dich
+                        selbst von unserem Geschmack und erfahre,
+                        warum so viele immer wieder zu uns kommen.
+                        Deine Meinung zählt!</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Location -->
+        <section class="location section" id="location">
+            <div class="location-content">
+                <div class="location-text">
+                    <h2>STANDORT</h2>
+                    <P>Unsere zentrale Lage macht uns leicht erreichbar – ob zu Fuß,
+                        mit dem Fahrrad oder den öffentlichen Verkehrsmitteln. Wir
+                        freuen uns darauf, Dich willkommen zu heißen!</P>
+                </div>
             </div>
         </section>
     </div>
