Work on reviews section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+
+    <!-- Other styles -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
@@ -123,6 +126,71 @@
                         selbst von unserem Geschmack und erfahre,
                         warum so viele immer wieder zu uns kommen.
                         Deine Meinung zählt!</p>
+                </div>
+                <div class="reviews-slider js-reviews-slider">
+                    <div>
+                        <div class="reviews-item">
+                            <div class="info">
+                                <img src="img/person1.jpeg" alt="first person">
+                                <div class="text-box">
+                                    <p class="reviewer-name">Anton S.</p>
+                                    <span class="reviewer-job">Student</span>
+                                </div>
+                            </div>
+                            <p class="review-text">Habe mir hier einen Döner geholt und war echt zufrieden.
+                                Das Fleisch war gut gewürzt, das Brot knusprig und die Soßen haben super dazugepasst.
+                                Die Portion war groß und der Preis in Ordnung. Ich werde wiederkommen!</p>
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                        </div>
+
+                        <div class="reviews-item">
+                            <div class="info">
+                                <img src="img/person2.jpeg" alt="second person">
+                                <div class="text-box">
+                                    <p class="reviewer-name">Friedrich M.</p>
+                                    <span class="reviewer-job">Rentner</span>
+                                </div>
+                            </div>
+                            <p class="review-text">Habe mir einen Döner bei Döner Zone geholt und war zufrieden.
+                                Das Fleisch war schön würzig, nicht zu fettig, und das Brot hatte eine gute Konsistenz.
+                                Die Soße war geschmackvoll, aber nicht zu aufdringlich. Gerne wieder!</p>
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                        </div>
+
+                        <div class="reviews-item">
+                            <div class="info">
+                                <img src="img/person3.jpeg" alt="third person">
+                                <div class="text-box">
+                                    <p class="reviewer-name">Chantal Y.</p>
+                                    <span class="reviewer-job">Krankenpflegerin</span>
+                                </div>
+                            </div>
+                            <p class="review-text">War heute das erste Mal bei Döner Zone und bin begeistert!
+                                Das Fleisch war saftig und gut gewürzt, das Brot frisch und knusprig.
+                                Auch die Portion war sehr großzügig.
+                                Das Personal war freundlich und die Bestellung ging schnell.
+                                Komme auf jeden Fall wieder!</p>
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
