--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                     Kebabs – mit frischen Zutaten, feinsten Gewürzen und einer Prise
                     Leidenschaft. Komm vorbei und schmeck den Unterschied!</p>
                 <div class="hero-buttons">
-                    <a href="#about" class="hero-button more">MEHR ERFAHREN</a>
-                    <a href="img/menu.png" target="_blank" class="hero-button menu">ZUR SPEISEKARTE</a>
+                    <a href="#about" class="hero-button menu">JETZT BESTELLEN</a>
                 </div>
             </div>
         </section>
