--- a/index.html
+++ b/index.html
@@ -24,17 +24,25 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar">
+        <div class="logo">
+            <img src="img/logo.svg" alt="Logo">
+        </div>
         <div class="nav-container">
-            <div class="nav-left">
-                <a href="#about">ÜBER UNS</a>
-                <a href="#gallery">GALERIE</a>
+            <div class="nav-links">
+                <ul class="nav-menu">
+                    <li><a href="#about">ÜBER UNS</a></li>
+                    <li><a href="#gallery">GALERIE</a></li>
+                    <li><a href="#reviews">REZENSIONEN</a></li>
+                    <li><a href="#location">STANDORT</a></li>
+                </ul>
             </div>
-            <div class="logo">
-                <img src="img/logo.svg" alt="Logo">
+            <div class="order-now">
+                <a href="https://www.lieferando.de/speisekarte/doner-zone" target="_blank"
+                rel="noopener noreferrer" class="order-now button">JETZT BESTELLEN</a>
             </div>
-            <div class="nav-right">
-                <a href="#reviews">REZENSIONEN</a>
-                <a href="#location">STANDORT</a>
+            <div class="hamburger" id="hamburger">
+                <img src="img/hamburger-menu.svg" alt="Menu" class="menu-icon">
+                <img src="img/cancel.svg" alt="Close" class="close-icon hidden">
             </div>
         </div>
     </nav>
@@ -48,7 +56,7 @@
                     Kebabs – mit frischen Zutaten, feinsten Gewürzen und einer Prise
                     Leidenschaft. Komm vorbei und schmeck den Unterschied!</p>
                 <div class="hero-buttons">
-                    <a href="#about" class="hero-button menu">JETZT BESTELLEN</a>
+                    <a href="https://www.lieferando.de/speisekarte/doner-zone" class="hero-button menu">JETZT BESTELLEN</a>
                 </div>
             </div>
         </section>
