--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <link rel="stylesheet" href="css/gallery.css">
     <link rel="stylesheet" href="css/reviews.css">
     <link rel="stylesheet" href="css/location.css">
+    <link rel="stylesheet" href="css/footer.css">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
 
     <!-- Other styles -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
@@ -204,8 +205,58 @@
                         mit dem Fahrrad oder den öffentlichen Verkehrsmitteln. Wir
                         freuen uns darauf, Dich willkommen zu heißen!</P>
                 </div>
+                <div class="location-details">
+                    <div class="opening-hours-section">
+                        <div class="opening-hours-header">
+                            <div class="clock-icon"><img src="img/clock-icon.svg"></div>
+                            <h3>Öffnungszeiten</h3>
+                        </div>
+                        <div class="opening-hours-content">
+                            <table>
+                                <tr>
+                                    <td>Montag:</td>
+                                    <td>11:30 - 22:00 Uhr</td>
+                                </tr>
+                                <tr>
+                                    <td>Dienstag:</td>
+                                    <td>11:30 - 22:00 Uhr</td>
+                                </tr>
+                                <tr>
+                                    <td>Mittwoch:</td>
+                                    <td>11:30 - 22:00 Uhr</td>
+                                </tr>
+                                <tr>
+                                    <td>Donnerstag:</td>
+                                    <td>11:30 - 22:00 Uhr</td>
+                                </tr>
+                                <tr>
+                                    <td>Freitag:</td>
+                                    <td>11:30 - 22:30 Uhr</td>
+                                </tr>
+                                <tr>
+                                    <td>Samstag:</td>
+                                    <td>11:30 - 22:30 Uhr</td>
+                                </tr>
+                                <tr>
+                                    <td>Sonntag:</td>
+                                    <td>11:30 - 22:00 Uhr</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="contact-map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2499.638438171634!2d6.828446478320866!3d51.20731363257913!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b8cb946e59c6ed%3A0x98396fc1e3ecaa65!2sD%C3%B6ner%20Zone!5e0!3m2!1sde!2sde!4v1743321736992!5m2!1sde!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
             </div>
         </section>
+
+        <!-- Footer -->
+        <footer class="footer" id="footer">
+            <p class="footer-text">Copyright &copy; 2025 Döner Zone - Erstellt von 
+                <a href="https://de.linkedin.com/in/deyi-rao-15608b2b2" target="_blank">Deyi Rao</a>
+            </p>
+        </footer>
     </div>
 
     <script src="js/fullImage.js"></script>
