--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dönerzone</title>
+    <link rel="icon" href="img/donerzone-favicon.png" type="image/png">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/navbar.css">
