--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
         <!-- Navigation -->
         <nav class="navbar">
             <div class="navbar-content">
-                <div class="logo">
-                    <img src="img/logo.svg" alt="Logo">
-                </div>
+                <a href="./index.html">
+                    <div class="logo">
+                        <img src="img/logo.svg" alt="Logo">
+                    </div>
+                </a>
                 <div class="nav-container">
                     <div class="nav-links">
                         <ul class="nav-menu">
