--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
     </div>
 
     <script src="js/fullImage.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/reviews.js"></script> <!-- Your custom script to initialize Swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
